CSS/styles.css
* {
    box-sizing: border-box;
    font-family: 'Source Sans Pro', sans-serif;
    margin: 0;
    padding: 0;
    
}
html,body
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

h1, h2 {
    text-align: center;
}
.Port {
    margin-top: 10px;
}
a {
    text-decoration: none;
    color: black;
}


#main_nav  {
    margin-top: 20px;
    list-style-type: none;
    display: flex;
    flex-direction: column;
    text-align: center; 
}

#main_nav li  {
    margin-bottom: 15px;
    border-style: outset;
    width: calc(100vw - 50px);
    align-self: center;
}
.intro {
    display: flex;
    flex-direction: column;
    margin-bottom: 5px;
    text-align: left;
    align-items: center;
}

#Portfolio {
    max-width: 1100px;
    padding: 10px;
    margin: 0 auto;
    background-color: beige;
}
.project {
    margin: 10px;
    min-height: 250px;
    color: black;
    letter-spacing: 1px;
    padding-top: 5px;
    text-align: center;
}

.project img {
    max-width: 280px;
    height: 250px;
}


#Contact {
    background-color: gray;
    margin: 0 auto;
    text-align: center;
}

#Contact p {
    margin-top: 1rem;
}



footer {
    border-top: solid black 3px;
    display: flex;
    background-color: lightcyan;
    justify-content: space-between;
    
}


#footernav {
    display: flex;
    align-self: flex-end;
    list-style-type: none;
}

#footernav a {
    padding: 0 10px;
}


.small-spacing-left {
    margin-left: 25px;
}

.small-spacing-right {
    margin-right: 25px;
}

.nav {
    display: none;
}


@media screen and (min-width: 768px) {

.intro {
    flex-direction: row;
    justify-content: space-between;
}
.intro img {
    order: 1;
}
#main_nav {
    flex-direction: row;
    justify-content: center;
    display: flex;
    align-items: center;
}
.small-spacing-right {
    margin: 0px;
}

#Portfolio {
    display: flex;
    flex-wrap: wrap;
}
.project {
    flex-basis: calc(50% - 20px);
}
#back {
    display: none;
}
.nav {
    display: inline;
}

}


@media screen and (min-width: 1024px) {
    #heading {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    #main_nav {
        width: 25%
    }
    
    .project {
        flex-basis: calc(33.333% - 20px);
    }

}

